header add z-index

--- a/Profile.html
+++ b/Profile.html
@@ -20,8 +20,8 @@
     <!--Header-->
     <div id="Header">
       <div id="Header_title">
-        <a class="Header_title_title1">蓬もち-Art</a>
-        <a class="Header_title_title2">Illustration/Design</a>
+        <p class="Header_title_title1">蓬もち-Art</p>
+        <p class="Header_title_title2">Illustration/Design</p>
       </div>
       <div class="Header_Button" id="Header_Illustrations"><a href="./Illustration.html">Illustrations</a></div>
       <div class="Header_Button" id="Header_Profile"><a href="./Profile.html">Profile</a></div>
