--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <!--Header-->
     <div id="Header">
       <div id="Header_title">
-        <a class="Header_title_title1">蓬もち-Art</a>
-        <a class="Header_title_title2">Illustration/Design</a>
+        <p class="Header_title_title1">蓬もち-Art</p>
+        <p class="Header_title_title2">Illustration/Design</p>
       </div>
 
       <div class="Header_Button" id="Header_Illustrations"><a href="./Illustration.html">Illustrations</a></div>
@@ -39,7 +39,7 @@
     <div id="Home"></div>
     <!--Profile情報を描く-->
     <div id="Profile">
-      <p class="Profile">Profile</p>
+      <p class="Profile"><a href="./Profile.html">Profile</a></p>
       <!--<h2 class="Profile">Profile</h2>-->
       <div class="Profile_Icon">
         <img src="./Images/Icon.jpg" alt="Icon" class="Profile_Icon"></img>
