change illustaration pages error

--- a/Illustration.html
+++ b/Illustration.html
@@ -33,11 +33,11 @@
     <!---->
     <div id="Selector">
       <ul>
-        <li><p id="All">All</p></li>
-        <li><p id="Original">Original</p></li>
-        <li><p id="FanFiction">FanFiction</p></li>
-        <li><p id="Vocaloid">Vocaloid</p></li>
-        <li><p id="Request">Request</p></li>
+        <li><p class="Selector_Category" id="All">All</p></li>
+        <li><p class="Selector_Category" id="Original">Original</p></li>
+        <li><p class="Selector_Category" id="FanFiction">FanFiction</p></li>
+        <li><p class="Selector_Category" id="Vocaloid">Vocaloid</p></li>
+        <li><p class="Selector_Category" id="Request">Request</p></li>
       </ul>
     </div>
     <div id="GridPage">
