--- a/Profile.html
+++ b/Profile.html
@@ -12,7 +12,7 @@
      <script type="text/javascript" src="./Scripts/profile.js"></script>
     <link rel="stylesheet" href="./Scripts/profile.css" type="text/css">
     <link rel="stylesheet" href="./Scripts/all.css" type="text/css">
-     <!-- <script type="text/javascript" src="./Scripts/all.js"></script> -->
+     <script type="text/javascript" src="./Scripts/all.js"></script>
     <title>蓬もち-Art/Profile</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   </head>
