--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="./Scripts/index.js"></script>
     <link rel="stylesheet" href="./Scripts/index.css" type="text/css">
     <link rel="stylesheet" href="./Scripts/all.css" type="text/css">
-    <!-- <script type="text/javascript" src="./Scripts/all.js"></script> -->
+    <script type="text/javascript" src="./Scripts/all.js"></script> 
   </head>
   <body>
     <!--Header-->
