--- a/Illustration.html
+++ b/Illustration.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./Scripts/illustration.css" type="text/css">
      <script type="text/javascript" src="./Scripts/illustration.js"></script>
     <link rel="stylesheet" href="./Scripts/all.css" type="text/css">
-     <!-- <script type="text/javascript" src="./Scripts/all.js"></script> -->
+    <script type="text/javascript" src="./Scripts/all.js"></script> 
     <title>蓬もち-Art/Illustration</title>
     </head>
   <body>
