--- a/Illustration.html
+++ b/Illustration.html
@@ -3,7 +3,7 @@
 <!------------------------------------>
 <!--  プロフィール画面のhtml             -->
 <!--  作成日：2020年06月07日           -->
-<!--  更新日：                        -->
+<!--   更新日：2020年08月27日          -->
 <!--  作成者：Yomogi Mochi            -->
 <!------------------------------------>
   <head>
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./Scripts/illustration.css" type="text/css">
      <script type="text/javascript" src="./Scripts/illustration.js"></script>
     <link rel="stylesheet" href="./Scripts/all.css" type="text/css">
-    <script type="text/javascript" src="./Scripts/all.js"></script> 
+    <script type="text/javascript" src="./Scripts/all.js"></script>
     <title>蓬もち-Art/Illustration</title>
     </head>
   <body>
