--- a/Profile.html
+++ b/Profile.html
@@ -3,7 +3,7 @@
 <!----------------------------------->
 <!--  プロフィール画面のhtml            -->
 <!--  作成日：2020年06月06日          -->
-<!--  更新日：                       -->
+<!--   更新日：2020年08月27日         -->
 <!--  作成者：Yomogi Mochi           -->
 <!------------------------------------>
   <head>
