--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!---------------------------------->
   <!--   ホーム画面のhtml              -->
   <!--   作成日：2020年06月06日         -->
-  <!--   更新日：                      -->
+  <!--   更新日：2020年08月27日         -->
   <!--   作成者：Yomogi Mochi          -->
   <!----------------------------------->
   <head>
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="./Scripts/index.js"></script>
     <link rel="stylesheet" href="./Scripts/index.css" type="text/css">
     <link rel="stylesheet" href="./Scripts/all.css" type="text/css">
-    <script type="text/javascript" src="./Scripts/all.js"></script> 
+    <script type="text/javascript" src="./Scripts/all.js"></script>
   </head>
   <body>
     <!--Header-->
