--- a/Profile.html
+++ b/Profile.html
@@ -35,7 +35,7 @@
       <div class="Profile_Info">
         <ul>
           <li style="display:block;"><p id="Profile_Name">蓬もち</p></li>
-          <li style="display:block;" class="Profile_Info_style">&emsp;絵描き/エンジニア</li>
+          <li style="display:block;" class="Profile_Info_style">&emsp;絵描き/クリエイター</li>
           <li style="display:block;" class="Profile_Info_style">
             2018年8月28日から絵を描きはじめました。<br class="br_hidden">イラストレータになれるように絵の勉強をしています。<br>
             <p style="font-size:50%;display: contents;">※誕生日は1月13日です</p><br class="br_hidden2">
