--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <img src="./Images/Icon.jpg" alt="Icon" class="Profile_Icon"></img>
         <div class="profile_icons_info">
           <p>蓬もち</p>
-          &emsp;絵描き/エンジニア
+          &emsp;絵描き/クリエイター
         </div>
         <a href="https://twitter.com/YomogiMochi0827" target="_blank"><img class="profile_sns_icons" src="./Images/Icons/twitter.png" alt="twitter_icon"></img></a>
         <a href="https://www.pixiv.net/users/37157158" target="_blank"><img class="profile_sns_icons" src="./Images/Icons/pixiv.png" alt="pixiv_iconIcon"></img></a>
